--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
 
 <style>
-body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: #222; }
+body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: #222; margin:0; }
 .topbar { background: #2b2f33; color: #fff; padding: 12px 0; }
 .logo { font-weight:700; letter-spacing:0.6px; color:#fff; }
 .nav-links a { color:#fff; text-decoration:none; margin-left:18px; font-weight:600; }
@@ -28,14 +28,68 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 .about-section { background:#222; color:#fff; padding:40px 20px; border-radius:12px; margin-top:40px; }
 .about-section img { width:100%; max-width:250px; margin-bottom:15px; border-radius:8px; }
 .modal-video iframe { width: 100%; height: 400px; border: none; border-radius:8px; }
-@media (max-width: 576px) {
-    .modal-video iframe { height: 250px; }
+@media (max-width: 576px) { .modal-video iframe { height: 250px; } }
+
+/* ===== CARDS COM ÍCONES GLOW + LINHA VERDE ===== */
+.cards-animated {
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px;
+  margin-top:50px;
 }
+
+.card-animated {
+  position:relative;
+  background:rgba(15,15,15,.95);
+  border-radius:18px;
+  padding:30px 25px;
+  text-align:center;
+  overflow:hidden;
+  transition:.3s ease;
+  color:#eaeaea;
+}
+
+.card-animated:hover {
+  transform:translateY(-5px);
+  box-shadow:0 0 50px rgba(0,255,100,.25);
+}
+
+/* Ícones grandes com glow */
+.glow-red { color: #ff3232; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #ff3232, 0 0 10px #ff3232, 0 0 20px #ff3232, 0 0 30px #ff3232; animation: pulseGlowRed 2s infinite alternate; }
+.glow-yellow { color: #ffd700; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #ffd700, 0 0 10px #ffd700, 0 0 20px #ffd700, 0 0 30px #ffd700; animation: pulseGlowYellow 2s infinite alternate; }
+.glow-blue { color: #00c8ff; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #00c8ff, 0 0 10px #00c8ff, 0 0 20px #00c8ff, 0 0 30px #00c8ff; animation: pulseGlowBlue 2s infinite alternate; }
+
+/* Linha verde correndo */
+.card-animated::after{
+  content:"";
+  position:absolute;
+  top:0;
+  left:-100%;
+  width:100%;
+  height:100%;
+  border-radius:18px;
+  background: linear-gradient(90deg, transparent 40%, rgba(0,255,64,0.25), transparent 60%);
+  opacity:0;
+  transition:0.3s;
+}
+.card-animated:hover::after{
+  opacity:1;
+  animation:runLine 1.2s linear infinite;
+}
+
+.card-animated h3{ margin:10px 0; }
+.card-animated p{ font-size:14px; color:#aaa; }
+
+/* Animações */
+@keyframes pulseGlowRed { from { text-shadow: 0 0 5px #ff3232,0 0 10px #ff3232,0 0 20px #ff3232,0 0 30px #ff3232; } to { text-shadow: 0 0 10px #ff3232,0 0 20px #ff3232,0 0 40px #ff3232,0 0 60px #ff3232; } }
+@keyframes pulseGlowYellow { from { text-shadow:0 0 5px #ffd700,0 0 10px #ffd700,0 0 20px #ffd700,0 0 30px #ffd700; } to { text-shadow:0 0 10px #ffd700,0 0 20px #ffd700,0 0 40px #ffd700,0 0 60px #ffd700; } }
+@keyframes pulseGlowBlue { from { text-shadow:0 0 5px #00c8ff,0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 30px #00c8ff; } to { text-shadow:0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 40px #00c8ff,0 0 60px #00c8ff; } }
+@keyframes runLine{ from{left:-100%} to{left:100%} }
+
 </style>
 </head>
 <body oncontextmenu="return false">
 
-<!-- Topbar / Navbar 021 CUSTOMS -->
 <header class="topbar">
 <div class="container d-flex justify-content-between align-items-center">
     <div class="d-flex align-items-center gap-3">
@@ -46,9 +100,9 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <a href="#">Início</a>
         <a href="tabela.html">Preços</a>
         <a href="shop.html">Loja</a>
-        <a href="relatorio.html">Relatorio</a>
+        <a href="relatorio.html">Relatório</a>
         <a href="#">Termos de Uso</a>
-        <a href="funcionarios.html">Funcionarios</a>
+        <a href="funcionarios.html">Funcionários</a>
         <a href="https://discord.gg/wunSmxVt" target="_blank" class="discord-btn">
             <i class="fa-brands fa-discord"></i> Discord
         </a>
@@ -58,9 +112,9 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 
 <main class="container my-5">
 
-<!-- Serviços em Cards -->
+<!-- SEÇÃO DE CURSOS -->
 <section class="mb-5">
-  <h2 class="mb-4">Nossos Cursos</h2>
+  <h2 class="mb-4 text-center">Nossos Cursos</h2>
   <div class="row justify-content-center">
     <div class="col-sm-4 d-flex justify-content-center">
       <div class="card card-service" data-bs-toggle="modal" data-bs-target="#ConsertoModal">
@@ -81,8 +135,28 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   </div>
 </section>
 
-<!-- Modais com Vídeos -->
-<!-- Modal Conserto -->
+<!-- CARDS COM ÍCONES GLOW + LINHA VERDE -->
+<section class="cards-animated">
+  <div class="card-animated">
+    <i class="fa-solid fa-car glow-red"></i>
+    <h3>Veículos Restritos</h3>
+    <p>Proibido fazer alterações em veículos da prefeitura, como viaturas, veículos de mecânica e OAB.</p>
+  </div>
+
+  <div class="card-animated">
+    <i class="fa-solid fa-coins glow-yellow"></i>
+    <h3>Valores da Tabela</h3>
+    <p>É proibido cobrar valores acima ou abaixo da tabela. Infrações podem resultar em wipe ou banimento.</p>
+  </div>
+
+  <div class="card-animated">
+    <i class="fa-solid fa-headset glow-blue"></i>
+    <h3>Dúvidas e Suporte</h3>
+    <p>Problemas que fujam do RP podem ser relatados aos auxiliares ou responsáveis.</p>
+  </div>
+</section>
+
+<!-- Modais -->
 <div class="modal fade" id="ConsertoModal" tabindex="-1" aria-labelledby="ConsertoModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
@@ -97,7 +171,6 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   </div>
 </div>
 
-<!-- Modal Tunning -->
 <div class="modal fade" id="TunningModal" tabindex="-1" aria-labelledby="TunningModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-lg">
     <div class="modal-content">
@@ -126,38 +199,22 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   </div>
 </section>
 
-</main>
-
 <footer class="text-center py-4 text-muted">
 © <span id="year"></span> João Britto - Todos os direitos reservados
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-
 <script>
-// Atualiza o ano automaticamente
 document.getElementById('year').textContent = new Date().getFullYear();
 
-// BLOQUEIO DE INSPEÇÃO E CÓPIA
+// Bloqueio de inspeção e cópia
 document.addEventListener('contextmenu', e => e.preventDefault());
-
 document.onkeydown = function(e) {
-    if (
-        e.key === "F12" ||
-        (e.ctrlKey && e.shiftKey && e.key === "I") ||
-        (e.ctrlKey && e.shiftKey && e.key === "J") ||
-        (e.ctrlKey && e.key === "u") ||
-        (e.ctrlKey && e.key === "s")
-    ) {
-        e.preventDefault();
-        return false;
+    if (e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I") || (e.ctrlKey && e.shiftKey && e.key === "J") || (e.ctrlKey && e.key === "u") || (e.ctrlKey && e.key === "s")) {
+        e.preventDefault(); return false;
     }
 };
-
-// Bloqueia arrastar imagens
-document.querySelectorAll("img").forEach(img => {
-    img.setAttribute("draggable", "false");
-});
+document.querySelectorAll("img").forEach(img => { img.setAttribute("draggable", "false"); });
 </script>
 
 </body>
