Add new section for painting services in tabela.html
Added a new section for 'Serviços de Pintura e Luz' to the pricing table, including various painting services and their prices.

--- a/tabela.html
+++ b/tabela.html
@@ -181,7 +181,7 @@ th {
         <div class="logo">021 CUSTOMS</div>
     </div>
     <nav class="d-none d-md-flex nav-links align-items-center">
-        <a href="#">Início</a>
+        <a href="index.html">Início</a>
 
         <!-- Preços com submenu Calculadora -->
         <div class="dropdown">
@@ -336,4 +336,5 @@ document.getElementById("year").textContent = new Date().getFullYear();
 
 </body>
 </html>
+
 
