--- a/index.html
+++ b/index.html
@@ -15,73 +15,78 @@
 
 <style>
 body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: #222; margin:0; }
+
+/* Topbar */
 .topbar { background: #2b2f33; color: #fff; padding: 12px 0; }
 .logo { font-weight:700; letter-spacing:0.6px; color:#fff; }
-.nav-links a { color:#fff; text-decoration:none; margin-left:18px; font-weight:600; }
-.nav-links a:hover { color:#cfcfcf; }
+
+/* Menu com efeito verde somente no hover */
+.nav-links { display: flex; gap: 18px; }
+.nav-links a:not(.discord-btn) {
+  font-weight: 600;
+  position: relative;
+  padding: 4px 0;
+  text-decoration: none;
+  color: #fff; /* texto branco normal */
+  background: none;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: #fff;
+  transition: 0.5s;
+}
+.nav-links a:not(.discord-btn):hover {
+  background: linear-gradient(90deg, #00ff64 30%, #fff 50%, #00ff64 70%);
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shineText 1s linear infinite;
+}
+
+@keyframes shineText {
+  0% { background-position: 200% 0; }
+  100% { background-position: -200% 0; }
+}
+
+/* Botão Discord sem efeito de brilho */
 .discord-btn { display:inline-flex; align-items:center; justify-content:center; gap:8px; padding:8px 16px; border-radius:12px; background:linear-gradient(135deg,#7289da,#99a9f0); color:#fff; font-weight:700; text-decoration:none; transition:0.25s; font-size:0.9rem; }
-.discord-btn:hover { background:linear-gradient(135deg,#5b6ea1,#7f88d0); transform:translateY(-2px); }
+.discord-btn:hover { 
+  background: linear-gradient(135deg,#5b6ea1,#7f88d0);
+  transform: translateY(-2px);
+  -webkit-background-clip: unset;
+  -webkit-text-fill-color: #fff;
+  animation: none;
+}
+
+/* Cursos */
 .card-service { border-radius: 16px; overflow: hidden; margin-bottom: 20px; cursor: pointer; transition: 0.3s; }
 .card-service:hover { transform: translateY(-3px); }
 .card-service img { height: 180px; object-fit: cover; }
-.subtitulo { font-weight:700; background:#e0e0e0; text-align:center; padding:5px 0; margin-bottom:10px; }
+
+/* Sobre nós */
 .about-section { background:#222; color:#fff; padding:40px 20px; border-radius:12px; margin-top:40px; }
 .about-section img { width:100%; max-width:250px; margin-bottom:15px; border-radius:8px; }
+
+/* Modal video */
 .modal-video iframe { width: 100%; height: 400px; border: none; border-radius:8px; }
 @media (max-width: 576px) { .modal-video iframe { height: 250px; } }
 
 /* ===== CARDS COM ÍCONES GLOW + LINHA VERDE ===== */
-.cards-animated {
-  display:grid;
-  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
-  gap:25px;
-  margin-top:50px;
-}
-
-.card-animated {
-  position:relative;
-  background:rgba(15,15,15,.95);
-  border-radius:18px;
-  padding:30px 25px;
-  text-align:center;
-  overflow:hidden;
-  transition:.3s ease;
-  color:#eaeaea;
-}
-
-.card-animated:hover {
-  transform:translateY(-5px);
-  box-shadow:0 0 50px rgba(0,255,100,.25);
-}
+.cards-animated { display:grid; grid-template-columns:repeat(auto-fit,minmax(260px,1fr)); gap:25px; margin-top:50px; }
+.card-animated { position:relative; background:rgba(15,15,15,.95); border-radius:18px; padding:30px 25px; text-align:center; overflow:hidden; transition:.3s ease; color:#eaeaea; }
+.card-animated:hover { transform:translateY(-5px); box-shadow:0 0 50px rgba(0,255,100,.25); }
 
 /* Ícones grandes com glow */
 .glow-red { color: #ff3232; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #ff3232, 0 0 10px #ff3232, 0 0 20px #ff3232, 0 0 30px #ff3232; animation: pulseGlowRed 2s infinite alternate; }
 .glow-yellow { color: #ffd700; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #ffd700, 0 0 10px #ffd700, 0 0 20px #ffd700, 0 0 30px #ffd700; animation: pulseGlowYellow 2s infinite alternate; }
 .glow-blue { color: #00c8ff; font-size:48px; margin-bottom:15px; text-shadow: 0 0 5px #00c8ff, 0 0 10px #00c8ff, 0 0 20px #00c8ff, 0 0 30px #00c8ff; animation: pulseGlowBlue 2s infinite alternate; }
 
-/* Linha verde correndo */
-.card-animated::after{
-  content:"";
-  position:absolute;
-  top:0;
-  left:-100%;
-  width:100%;
-  height:100%;
-  border-radius:18px;
-  background: linear-gradient(90deg, transparent 40%, rgba(0,255,64,0.25), transparent 60%);
-  opacity:0;
-  transition:0.3s;
-}
-.card-animated:hover::after{
-  opacity:1;
-  animation:runLine 1.2s linear infinite;
-}
+/* Linha verde correndo nos cards */
+.card-animated::after{ content:""; position:absolute; top:0; left:-100%; width:100%; height:100%; border-radius:18px; background: linear-gradient(90deg, transparent 40%, rgba(0,255,64,0.25), transparent 60%); opacity:0; transition:0.3s; }
+.card-animated:hover::after{ opacity:1; animation:runLine 1.2s linear infinite; }
 
 .card-animated h3{ margin:10px 0; }
 .card-animated p{ font-size:14px; color:#aaa; }
 
-/* Animações */
-@keyframes pulseGlowRed { from { text-shadow: 0 0 5px #ff3232,0 0 10px #ff3232,0 0 20px #ff3232,0 0 30px #ff3232; } to { text-shadow: 0 0 10px #ff3232,0 0 20px #ff3232,0 0 40px #ff3232,0 0 60px #ff3232; } }
+@keyframes pulseGlowRed { from { text-shadow:0 0 5px #ff3232,0 0 10px #ff3232,0 0 20px #ff3232,0 0 30px #ff3232; } to { text-shadow:0 0 10px #ff3232,0 0 20px #ff3232,0 0 40px #ff3232,0 0 60px #ff3232; } }
 @keyframes pulseGlowYellow { from { text-shadow:0 0 5px #ffd700,0 0 10px #ffd700,0 0 20px #ffd700,0 0 30px #ffd700; } to { text-shadow:0 0 10px #ffd700,0 0 20px #ffd700,0 0 40px #ffd700,0 0 60px #ffd700; } }
 @keyframes pulseGlowBlue { from { text-shadow:0 0 5px #00c8ff,0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 30px #00c8ff; } to { text-shadow:0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 40px #00c8ff,0 0 60px #00c8ff; } }
 @keyframes runLine{ from{left:-100%} to{left:100%} }
