--- a/index.html
+++ b/index.html
@@ -20,17 +20,14 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 .topbar { background: #2b2f33; color: #fff; padding: 12px 0; }
 .logo { font-weight:700; letter-spacing:0.6px; color:#fff; }
 
-/* Menu com efeito verde somente no hover */
+/* Menu desktop com efeito verde no hover */
 .nav-links { display: flex; gap: 18px; }
 .nav-links a:not(.discord-btn) {
   font-weight: 600;
   position: relative;
   padding: 4px 0;
   text-decoration: none;
-  color: #fff; /* texto branco normal */
-  background: none;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: #fff;
+  color: #fff;
   transition: 0.5s;
 }
 .nav-links a:not(.discord-btn):hover {
@@ -41,19 +38,38 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
   animation: shineText 1s linear infinite;
 }
 
-@keyframes shineText {
-  0% { background-position: 200% 0; }
-  100% { background-position: -200% 0; }
-}
-
 /* Botão Discord sem efeito de brilho */
 .discord-btn { display:inline-flex; align-items:center; justify-content:center; gap:8px; padding:8px 16px; border-radius:12px; background:linear-gradient(135deg,#7289da,#99a9f0); color:#fff; font-weight:700; text-decoration:none; transition:0.25s; font-size:0.9rem; }
 .discord-btn:hover { 
   background: linear-gradient(135deg,#5b6ea1,#7f88d0);
   transform: translateY(-2px);
-  -webkit-background-clip: unset;
-  -webkit-text-fill-color: #fff;
   animation: none;
+}
+
+/* Hamburger menu mobile */
+.navbar-toggler { border: none; background: transparent; outline: none; }
+
+/* Menu mobile com brilho verde */
+.mobile-link {
+  color: #fff;
+  font-weight: 600;
+  position: relative;
+  text-decoration: none;
+  transition: 0.5s;
+}
+.mobile-link:hover {
+  background: linear-gradient(90deg, #00ff64 30%, #fff 50%, #00ff64 70%);
+  background-size: 200% 100%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: shineText 1s linear infinite;
+  display: inline-block;
+  padding-left: 4px;
+}
+
+@keyframes shineText {
+  0% { background-position: 200% 0; }
+  100% { background-position: -200% 0; }
 }
 
 /* Cursos */
@@ -90,7 +106,6 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 @keyframes pulseGlowYellow { from { text-shadow:0 0 5px #ffd700,0 0 10px #ffd700,0 0 20px #ffd700,0 0 30px #ffd700; } to { text-shadow:0 0 10px #ffd700,0 0 20px #ffd700,0 0 40px #ffd700,0 0 60px #ffd700; } }
 @keyframes pulseGlowBlue { from { text-shadow:0 0 5px #00c8ff,0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 30px #00c8ff; } to { text-shadow:0 0 10px #00c8ff,0 0 20px #00c8ff,0 0 40px #00c8ff,0 0 60px #00c8ff; } }
 @keyframes runLine{ from{left:-100%} to{left:100%} }
-
 </style>
 </head>
 <body oncontextmenu="return false">
@@ -101,6 +116,15 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
         <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
         <div class="logo">021 CUSTOMS</div>
     </div>
+
+    <!-- Botão hamburger para celular -->
+    <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-expanded="false" aria-label="Abrir menu">
+      <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
+      <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
+      <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
+    </button>
+
+    <!-- Menu desktop -->
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="#">Início</a>
         <a href="tabela.html">Preços</a>
@@ -112,11 +136,25 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
+
+    <!-- Menu mobile -->
+    <div class="collapse d-md-none" id="mobileMenu">
+      <div class="bg-dark p-3 rounded mt-2">
+        <a href="#" class="mobile-link d-block py-2">Início</a>
+        <a href="tabela.html" class="mobile-link d-block py-2">Preços</a>
+        <a href="shop.html" class="mobile-link d-block py-2">Loja</a>
+        <a href="relatorio.html" class="mobile-link d-block py-2">Relatório</a>
+        <a href="#" class="mobile-link d-block py-2">Termos de Uso</a>
+        <a href="funcionarios.html" class="mobile-link d-block py-2">Funcionários</a>
+        <a href="https://discord.gg/wunSmxVt" target="_blank" class="d-block discord-btn mt-2 text-center">
+          <i class="fa-brands fa-discord"></i> Discord
+        </a>
+      </div>
+    </div>
 </div>
 </header>
 
 <main class="container my-5">
-
 <!-- SEÇÃO DE CURSOS -->
 <section class="mb-5">
   <h2 class="mb-4 text-center">Nossos Cursos</h2>
