--- a/calculadora.html
+++ b/calculadora.html
@@ -15,49 +15,19 @@
 
 <style>
 * { 
-  user-select: none !important;
+  user-select: none !important; /* Bloqueia seleção de texto */
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
 }
-body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: #222; margin:0; }
-
-/* Topbar / Navbar */
+body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: #222; }
 .topbar { background: #2b2f33; color: #fff; padding: 12px 0; }
 .logo { font-weight:700; letter-spacing:0.6px; color:#fff; }
-
-/* Links desktop */
-.nav-links a:not(.discord-btn) {
-  color:#fff; text-decoration:none; margin-left:18px; font-weight:600; position:relative; transition:0.5s;
-}
-.nav-links a:not(.discord-btn):hover {
-  background: linear-gradient(90deg, #00ff64 30%, #fff 50%, #00ff64 70%);
-  background-size: 200% 100%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shineText 1s linear infinite;
-}
-@keyframes shineText {0%{background-position:200% 0;}100%{background-position:-200% 0;}}
-
-/* Botão Discord sem brilho */
+.nav-links a { color:#fff; text-decoration:none; margin-left:18px; font-weight:600; }
+.nav-links a:hover { color:#cfcfcf; }
 .discord-btn { display:inline-flex; align-items:center; justify-content:center; gap:8px; padding:8px 16px; border-radius:12px; background:linear-gradient(135deg,#7289da,#99a9f0); color:#fff; font-weight:700; text-decoration:none; transition:0.25s; font-size:0.9rem; }
-.discord-btn:hover { background:linear-gradient(135deg,#5b6ea1,#7f88d0); transform:translateY(-2px); animation:none; }
+.discord-btn:hover { background:linear-gradient(135deg,#5b6ea1,#7f88d0); transform:translateY(-2px); }
 
-/* Hamburger menu mobile */
-.navbar-toggler { border: none; background: transparent; outline: none; }
-.navbar-toggler span { display:block; width:30px; height:3px; background:#fff; margin:6px 0; }
-
-/* Menu mobile */
-.mobile-link { color:#fff; font-weight:600; text-decoration:none; display:block; padding:8px 0; transition:0.5s; }
-.mobile-link:hover {
-  background: linear-gradient(90deg, #00ff64 30%, #fff 50%, #00ff64 70%);
-  background-size: 200% 100%;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  animation: shineText 1s linear infinite;
-}
-
-/* Cards e calculadora estilos mantidos */
 .card { margin: 10px; }
 .card-header h3 { color:#222; font-weight:600; }
 .list-group-item { display:flex; align-items:center; justify-content:space-between; }
@@ -65,11 +35,10 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 
 .calc-container { background-color: #fff; padding: 20px 25px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); margin: 20px auto; }
 .calc-container h1 { text-align: center; color: #333; margin-bottom: 20px; font-size: 24px; }
-button.calc-btn, button.clear-btn { margin-top: 10px; width: 100%; padding: 10px; font-size: 15px; border: none; border-radius: 8px; cursor: pointer; transition:0.2s; }
-button.calc-btn { background-color: #4caf50; color: white; }
-button.calc-btn:hover { background-color:#45a049; }
-button.clear-btn { background-color: #f44336; color:white; }
-button.clear-btn:hover { background-color:#d73833; }
+button.calc-btn { margin-top: 10px; width: 100%; padding: 10px; font-size: 15px; border: none; border-radius: 8px; background-color: #4caf50; color: white; cursor: pointer; transition: 0.2s; }
+button.calc-btn:hover { background-color: #45a049; }
+button.clear-btn { margin-top: 10px; width: 100%; padding: 10px; font-size: 15px; border: none; border-radius: 8px; background-color: #f44336; color: white; cursor: pointer; transition: 0.2s; }
+button.clear-btn:hover { background-color: #d73833; }
 #relatorio { margin-top: 15px; width: 100%; height: 300px; font-family: monospace; background-color: #f8f9fa; padding: 10px; border: 1px solid #ccc; border-radius: 8px; white-space: pre; overflow-y: auto; font-size: 14px; }
 
 input#nomeMecanico { margin-bottom: 10px; }
@@ -82,10 +51,11 @@ img { -webkit-user-drag: none; user-drag: none; pointer-events: none; }
 
 <!-- Bloqueio de clique direito e atalhos -->
 <script>
-document.addEventListener('contextmenu', event => event.preventDefault());
+document.addEventListener('contextmenu', event => event.preventDefault()); // Bloqueia clique direito
 document.addEventListener('keydown', function(e) {
-    if (e.ctrlKey && (['c','C','u','U','s','S'].includes(e.key))) {
-        e.preventDefault(); alert("Ação não permitida!");
+    if (e.ctrlKey && (e.key === 'c' || e.key === 'C' || e.key === 'u' || e.key === 'U' || e.key === 's' || e.key === 'S')) {
+        e.preventDefault(); // Bloqueia Ctrl+C, Ctrl+U e Ctrl+S
+        alert("Ação não permitida!");
     }
 });
 </script>
@@ -97,13 +67,6 @@ document.addEventListener('keydown', function(e) {
         <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;">
         <div class="logo">021 CUSTOMS</div>
     </div>
-
-    <!-- Hamburger mobile -->
-    <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu" aria-label="Abrir menu">
-      <span></span><span></span><span></span>
-    </button>
-
-    <!-- Menu desktop -->
     <nav class="d-none d-md-flex align-items-center nav-links">
         <a href="index.html">Início</a>
         <a href="tabela.html">Preços</a>
@@ -115,36 +78,42 @@ document.addEventListener('keydown', function(e) {
             <i class="fa-brands fa-discord"></i> Discord
         </a>
     </nav>
-
-    <!-- Menu mobile -->
-    <div class="collapse d-md-none" id="mobileMenu">
-      <div class="bg-dark p-3 rounded mt-2">
-        <a href="index.html" class="mobile-link">Início</a>
-        <a href="tabela.html" class="mobile-link">Preços</a>
-        <a href="shop.html" class="mobile-link">Loja</a>
-        <a href="relatorio.html" class="mobile-link">Relatório</a>
-        <a href="#" class="mobile-link">Termos de Uso</a>
-        <a href="funcionarios.html" class="mobile-link">Funcionários</a>
-        <a href="https://discord.gg/wunSmxVt" target="_blank" class="d-block discord-btn mt-2 text-center">
-          <i class="fa-brands fa-discord"></i> Discord
-        </a>
-      </div>
-    </div>
 </div>
 </header>
 
-<!-- Conteúdo da calculadora -->
+<!-- Conteúdo -->
 <div class="container mt-4">
   <div class="row">
+    <!-- Cards de Itens -->
     <div class="col-lg-8 col-md-12">
       <div class="row">
+
         <!-- TUNAGEM -->
         <div class="card col-12">
           <div class="card-header"><h3>TUNAGEM</h3></div>
           <ul class="list-group list-group-flush">
-            <!-- Itens mantidos conforme seu código original -->
             <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="150000"><label class="form-check-label">Motor</label></div></li>
-            <!-- ... todos os outros itens ... -->
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Bloco de Motor</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Som do Motor</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="150000"><label class="form-check-label">Freio</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="280000"><label class="form-check-label">Transmissão</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="250000"><label class="form-check-label">Turbo</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="95000"><label class="form-check-label">Hidráulica</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="400000"><label class="form-check-label">Blindagem</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Doors</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Saia</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Parachoque Dianteiro</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Capô</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Escapamento</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Arch Cover</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Gaiola de Proteção</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Parachoque Traseiro</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Buzina</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Painel</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Para Lama</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Bancos</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Grelha</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="80000"><label class="form-check-label">Vidro</label></div></li>
           </ul>
         </div>
 
@@ -153,9 +122,16 @@ document.addEventListener('keydown', function(e) {
           <div class="card-header"><h3>ESTÉTICA</h3></div>
           <ul class="list-group list-group-flush">
             <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Primária</label></div></li>
-            <!-- ... todos os outros itens ... -->
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Secundária</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Cromado</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Perolado</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Pintura Decal</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Xenon</label></div></li>
+	    <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="30000"><label class="form-check-label">Neon</label></div></li>
+            <li class="list-group-item"><div class="form-check"><input class="dias form-check-input" type="checkbox" value="40000"><label class="form-check-label">Fumaça</label></div></li>
           </ul>
         </div>
+
       </div>
     </div>
 
@@ -182,6 +158,7 @@ document.addEventListener('keydown', function(e) {
 <!-- Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+
 <script>
 document.getElementById("year").textContent = new Date().getFullYear();
 
@@ -200,7 +177,7 @@ function atualizarRelatorio() {
     $('#relatorio').val(texto);
 }
 
-// Permitir apenas letras e espaços no nome
+// Permitir apenas letras e espaços no nome do mecânico
 $('#nomeMecanico').on('input', function() {
     this.value = this.value.replace(/[^A-Za-zÀ-ú\s]/g, '');
     atualizarRelatorio();
@@ -227,3 +204,4 @@ $('#btnCopy').click(function(){
 
 </body>
 </html>
+
