--- a/index.html
+++ b/index.html
@@ -111,14 +111,14 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
 <body oncontextmenu="return false">
 
 <header class="topbar">
-<div class="container d-flex justify-content-between align-items-center">
+<div class="container d-flex justify-content-between align-items-center flex-wrap">
     <div class="d-flex align-items-center gap-3">
         <img src="https://i.imgur.com/SP9nsky.png" alt="Logo" style="height:90px; width:auto; border-radius:8px;" draggable="false">
         <div class="logo">021 CUSTOMS</div>
     </div>
 
     <!-- Botão hamburger para celular -->
-    <button class="navbar-toggler d-md-none" type="button" data-bs-toggle="collapse" data-bs-target="#mobileMenu" aria-controls="mobileMenu" aria-expanded="false" aria-label="Abrir menu">
+    <button class="navbar-toggler d-md-none" type="button" aria-label="Abrir menu">
       <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
       <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
       <span class="navbar-toggler-icon" style="width:30px; height:3px; background:#fff; display:block; margin:6px 0;"></span>
@@ -138,8 +138,8 @@ body { font-family: "Inter", system-ui, sans-serif; background: #f7f7f7; color: 
     </nav>
 
     <!-- Menu mobile -->
-    <div class="collapse d-md-none" id="mobileMenu">
-      <div class="bg-dark p-3 rounded mt-2">
+    <div class="d-md-none w-100 collapse mt-2" id="mobileMenu">
+      <div class="bg-dark p-3 rounded">
         <a href="#" class="mobile-link d-block py-2">Início</a>
         <a href="tabela.html" class="mobile-link d-block py-2">Preços</a>
         <a href="shop.html" class="mobile-link d-block py-2">Loja</a>
@@ -253,11 +253,20 @@ document.getElementById('year').textContent = new Date().getFullYear();
 // Bloqueio de inspeção e cópia
 document.addEventListener('contextmenu', e => e.preventDefault());
 document.onkeydown = function(e) {
-    if (e.key === "F12" || (e.ctrlKey && e.shiftKey && e.key === "I") || (e.ctrlKey && e.shiftKey && e.key === "J") || (e.ctrlKey && e.key === "u") || (e.ctrlKey && e.key === "s")) {
+    if (e.key === "F12" || 
+        (e.ctrlKey && e.shiftKey && ["I","J"].includes(e.key.toUpperCase())) || 
+        (e.ctrlKey && ["U","S"].includes(e.key.toUpperCase()))) {
         e.preventDefault(); return false;
     }
 };
 document.querySelectorAll("img").forEach(img => { img.setAttribute("draggable", "false"); });
+
+// Hamburger toggle mobile
+const toggler = document.querySelector('.navbar-toggler');
+const mobileMenu = document.getElementById('mobileMenu');
+toggler.addEventListener('click', () => {
+    mobileMenu.classList.toggle('show');
+});
 </script>
 
 </body>
